src/components/Info.css
.info-box {
  background-color: #ffffff;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  padding: 1rem;
  margin: 1rem 1rem 0;
}

.info-box h2 {
  margin: 0;
  padding: 0;
  font-size: 1.25rem;
}

.info-box h3 {
  font-size: 1rem;
}

#info {
  text-align: center;
}

#info-name {
  font-weight: bold;
  margin-top: 0.5rem;
}

#info-title {
  font-size: 0.75rem;
}

#info-mail {
  margin-top: 1rem;
}

.privacy-header {
  display: flex;
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

.privacy-header h3 {
  margin: 0 0 0 0.5rem;
  font-size: 1rem;
  line-height: 1.25rem;
}

